# dgus-moonraker-screen

./: Addresses.md  Cargo.toml  README.md  build-all.sh  publish.sh  serial-screen.service  setup.sh
DGUS-Project/: DGUS-Project  DWprj.hmi  DWprj.tft  DisplayConfig.xls  T5LCFG.CFG  TouchConfig.xls
DGUS-Project/DWIN_SET/: 0_DWIN_ASC.HZK  25_progress_bar.icl  26_resume_button.icl  28_resume_button.icl  T5UID1.CFG
DGUS-Project/TFT/: 000_boot.bmp.tft  001_start.bmp.tft  002_pop.bmp.tft  002_printing_progress.bmp.tft  003_emergency_stop.bmp.tft  004_preheat.bmp.tft  005_toolhead.bmp.tft  006_macros.bmp.tft
moonraker-api/: Cargo.toml
moonraker-api/src/: lib.rs  main.rs  methods.rs  params.rs  websocket.rs
serial-screen/: Cargo.toml
serial-screen/.cargo/: config
serial-screen/src/: buttons.rs  main.rs  moonraker.rs  screen_state.rs  serial_utils.rs  structs.rs  updater.rs  utils.rs  websocket.rs
serial-test/: Cargo.toml
serial-test/.cargo/: config
serial-test/src/: main.rs  utils.rs
src/: main.rs
view-designer/: package-lock.json  package.json  svelte.config.js
view-designer/src/: app.html
view-designer/src/lib/: Bitmap.ts  Utils.ts  types.ts
view-designer/src/lib/components/: Header.svelte
view-designer/src/routes/: +layout.svelte  +page.svelte
view-designer/src/routes/creator/: +layout.svelte
view-designer/src/routes/progress/: +layout.svelte
view-designer/src/routes/views/: 000_boot.svelte  001_start.svelte  002_printing_progress.svelte  003_emergency_stop.svelte  004_preheat.svelte  005_toolhead.svelte  006_macros.svelte  test.svelte
