[package]
name = "moonraker-api"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
fastwebsockets = { git="https://github.com/denoland/fastwebsockets.git", features = ["hyper", "upgrade"] }
hyper = { version = "0.14.27", features = ["client"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.29.0", features = ["full"] }
