[package]
name = "serial-screen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
reqwest = { version = "0.11.18", default-features = false, features = ["json"] }
moonraker-api = { path = "../moonraker-api" }
rppal = "0.14.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.29.0", features = ["full"] }

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
