[package]
name = "serial-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
rppal = "0.14.1"
tokio = { version = "1.29.0", features = ["full"] }

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
